# Market-Demo-FastAPI

./: .gitignore  docker-compose.yml  pyproject.toml
services/notifications/: README.md  alembic.ini
services/notifications/src/: app.py  config.py  enums.py
services/notifications/src/api/http/: settings_v1.py
services/notifications/src/api/middlewares/: x_request_id.py
services/notifications/src/api/routers/: notifications_v1.py
services/notifications/src/api/ws/: manager.py  notifications_v1.py
services/notifications/src/common/: exception.py
services/notifications/src/consumers/: broker.py  deps.py  dto.py  user_events.py
services/notifications/src/db/: create_database.py
services/notifications/src/db/models/: __init__.py  (+3 more)
services/notifications/src/domain/: emails.py  notifications.py  users.py
services/notifications/src/dto/: email.py  notification.py
services/notifications/src/security/: custom_auth.py
services/notifications/src/utils/: logger.py
services/users/: .env.example  README.md  alembic.ini
services/users/app/: api.py  config.py  main.py
services/users/app/db/: create_database.py  database.py
services/users/app/dto/: user.py
services/users/src/: app.py  config.py  main.py
services/users/src/db/: database.py
services/users/src/domain/: users.py
services/users/src/dto/: auth.py  user.py
services/users/src/events/: dto.py
services/users/src/key_value_db/: redis.py
services/users/src/security/: create_token.py  custom_auth.py  http.py  password_hasher.py  validate_token.py
services/users/src/utils/: logger.py
(+19 files in other folders)
