[project]
name = "workhub"
version = "0.1.0"
description = ""
authors = [
    {name = "Zhuravskiy Vladislav",email = "swiglek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "ruff (>=0.12.11,<0.13.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "aio-pika (>=9.5.7,<10.0.0)",
    "faststream[kafka] (>=0.6.0,<0.7.0)",
    "redis (>=6.4.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
